# CPP

./: .gitignore  LICENSE  README.md
NeuronetiX/: Make_Project.bat
NeuronetiX/PetAdoptionGame/: CMakeLists.txt
NeuronetiX/PetAdoptionGame/src/: Game.cpp  Pet.cpp
NeuronetiX/PetAdoptionGame/tests/: unit_tests.cpp
NeuronetiX/PetAdoptionGame/ui/: main.cpp
NeuronetiX/Week1/: Game.cpp  Game.hpp  Pet.hpp  main.cpp
NeuronetiX/Week1/PetAdoptionGame/: CMakeLists.txt  Game.cpp  Game.hpp  Pet.cpp  Pet.hpp  main.cpp
NeuronetiX/Week1/PetAdoptionGame/doc/: Doxyfile
NeuronetiX/Week1/PetAdoptionGame/doc/html/: index.html
NeuronetiX/Week1/PetAdoptionGame/include/: Game.hpp  Pet.hpp
NeuronetiX/Week1/PetAdoptionGame/src/: Game.cpp  Pet.cpp  main.cpp
NeuronetiX/Week1/PetAdoptionGame/tests/: unit_tests.cpp
NeuronetiX/Week1/PetAdoptionGame/ui/: main.cpp
Solos/Alignment/: alignment.cpp
Solos/Friend/: friend.cpp
Solos/Nullptr/: nullptr.cpp
